fixed intellij warnings